# Copyright David Callu 2013
#
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)



########################################################################################################################
########################################################################################################################
#
# define minimum cmake version
#
########################################################################################################################
########################################################################################################################
cmake_minimum_required(VERSION 3.6.1)
cmake_policy(VERSION 3.6)



include("${CMAKE_CURRENT_LIST_DIR}/cmake/tools/cmut/cmut.cmake")
cmut__config__print_info()
########################################################################################################################
########################################################################################################################
#
# define project name/version
#
########################################################################################################################
########################################################################################################################
cmut__project__read_version_file(version "${CMAKE_CURRENT_LIST_DIR}/version.txt")
project(gen_prog VERSION ${version})
cmut__config__log_project_begin()

cmut__project__get_build_time(${PROJECT_NAME}_BUILD_TIME)
cmut__project__get_git_revision_count(${PROJECT_NAME}_GIT_REVISION_COUNT)
cmut__project__get_git_revision_hash(${PROJECT_NAME}_GIT_REVISION_HASH)


########################################################################################################################
########################################################################################################################
#
# define CMake Module path
#
########################################################################################################################
########################################################################################################################
list(INSERT CMAKE_MODULE_PATH 0
    ${CMAKE_HOME_DIRECTORY}/cmake
)


##--------------------------------------------------------------------------------------------------------------------##
# define build options
##--------------------------------------------------------------------------------------------------------------------##
cmut__config__option_developer_mode()
cmut__config__option_build_documentation(OFF)
cmut__config__option_build_examples(OFF)
cmut__config__option_build_shared_libs(ON)
include(CTest) # define BUILD_TESTING
cmut__config__option_ccache(ON)
cmut__config__option_clang_tidy(OFF)
cmut__config__option_cppcheck(OFF)
cmut__config__option_include_what_you_use(OFF)

cmut__config__default_build_type(Release)
cmut__config__default_cxx_standard(14)



##--------------------------------------------------------------------------------------------------------------------##
# install dependencies
##--------------------------------------------------------------------------------------------------------------------##
cmut__dependency__build_with_conan( BUILD outdated )
include("${CMAKE_CURRENT_LIST_DIR}/cmake/dependencies/include_all.cmake")


##--------------------------------------------------------------------------------------------------------------------##
# define build policies
##--------------------------------------------------------------------------------------------------------------------##
cmut__project__setup_project( WARNING_AGGRESSIVE )


########################################################################################################################
########################################################################################################################
#
# add subdirectories
#
########################################################################################################################
########################################################################################################################

add_subdirectory(src)

if(BUILD_DOC)
#    add_subdirectory(doc)
endif()

if(BUILD_TESTING)
    add_subdirectory(test)
endif()



########################################################################################################################
########################################################################################################################
#
# define install policies
#
########################################################################################################################
########################################################################################################################

cmut__install__install_config_and_version()
cmut__install__config_dependencies_directory( "cmake/dependencies" )

cmut__install__component__make_targets(devel runtime)


########################################################################################################################
########################################################################################################################
#
# define uninstall policies
#
########################################################################################################################
########################################################################################################################

#include(cmut_define_uninstall_target)


cmut__config__log_project_end()
