# gen_prog build definition
# Copyright David Callu 2013
#
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

set(target gen_prog)



#######################################################################################################################
#######################################################################################################################
#
# sources definition
#
#######################################################################################################################
#######################################################################################################################

set(${target}_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include/${target}")

set(
    ${target}_HEADERS
    "${${target}_INCLUDE_DIR}/environ.hpp"
)



#######################################################################################################################
#######################################################################################################################
#
# build command
#
#######################################################################################################################
#######################################################################################################################

add_library(
    ${target} INTERFACE
#    ${${target}_HEADERS}
)
target_compile_features( ${target} INTERFACE cxx_std_14 )

#set_target_properties(${target}
#    PROPERTIES
#        LINKER_LANGUAGE CXX
#    )


#cmut__target__generate_export_header(${target})
cmut__target__set_library_version(${target} ${PROJECT_VERSION})



cmut__build__msvc__secure_no_warning(${target})
cmut__build__msvc__nominmax(${target})

target_include_directories(
    ${target}
    INTERFACE
        "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
        )


#######################################################################################################################
#######################################################################################################################
#
# install command
#
#######################################################################################################################
#######################################################################################################################

cmut__install__install_library(${target})
